--- a/css/mobile.css
+++ b/css/mobile.css
@@ -60,14 +60,16 @@
     border-right: 1px solid #282828;
     padding-right: 15px;
     position: relative;
+    text-decoration: none;
   }
 
-  .asset-stats-table .expanded-rows {
+  .asset-stats-table .details-rows {
     background: #333333;
     border: 1px solid rgba(80,200,240,0.50);
+    box-shadow: 0 2px 6px 2px rgba(80,200,240,0.10), inset 0 2px 4px 0 rgba(0,0,0,0.20);
   }
 
-  .asset-stats-table .expanded-rows .main-row {
+  .asset-stats-table .details-rows .main-row {
     border-bottom-color: #414141;
     border-left: none;
     border-right: none;
