--- a/css/onboarding.css
+++ b/css/onboarding.css
@@ -11,6 +11,10 @@
   min-height: 100vh;
 }
 
+.onboarding-modal .modal-dialog {
+  width: 333px;
+}
+
 .onboarding-block {
   background: #1C1C1C;
   box-shadow: 0 5px 10px 0 rgba(0,0,0,0.50);
